# reson

./: .gitignore  .lcovrc  Cargo.toml  README.md  flake.nix  justfile  meson.build
.github/workflows/: build.yml  coverage.yml  rust.yml
reson/: meson.build
reson/include/reson/: cli.hpp
reson/src/: cli.cpp  main.cpp
src/: build.rs  coredata.rs  environment.rs  lib.rs  main.rs
src/ast/: mod.rs
src/backend/: build_element.rs  mod.rs  ninja.rs
src/compiler/: cpp.rs  mod.rs
src/interpreter/: ast.rs  file.rs  functions.rs  helpers.rs  interpreter.rs  mod.rs  objects.rs
src/parser/: lexer.rs  mod.rs  node.rs  parser.rs  token.rs  tokens.rs
src/utils/: mod.rs
tests/: integration_tests.rs  simple.rs  test1.rs
tests/build_scripts/simple/: build.ninja  main.cpp  meson.build
tests/build_scripts/test1/: math.hpp  meson.build
tests/build_scripts/test2/: main.cpp  math.cpp  math.hpp  meson.build  ref_build.ninja
tests/compile_tests/: mod.rs
tests/compile_tests/simple/: meson.build
tests/unit/: cli.cpp  meson.build
