[package]
name = "reson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
chrono = "0.4.22"
clap = { version = "4.0.12", features = ["derive"] }
env_logger = "0.11.0"
file_diff = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.17"
logos = { version = "0.13.0", features = ["logos-derive", "export_derive", "std"] }
logos-derive = "0.14.0"
pathdiff = "0.2.1"
regex = "1.6.0"
snafu = "0.8.0"
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0.40"
which = "5.0.0"
