[package]
name = "reson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
coverage-helper = "0.2.2"
enum-as-inner = "0.6.1"
logos = { version = "0.14.2" }
thiserror = "1.0.68"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
